--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -20,7 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/chautruongthinh/HandsomeMod
+  # REPO_URL: https://github.com/chautruongthinh/HandsomeMod
+  REPO_URL: https://github.com/zfdx123/UFI-OpenWRT
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
